--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@ comments: true
 		<a class="label label-default" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		{% endfor %}
 		{% if post.noimage %}
-		{% else %}		
+		{% else %}	
+		<img
+			alt="{{ post.title }}"
+			src="/assets/images/{{post.id}}/top.jpg" class="img-responsive">
 		{% endif %}
 		<p>{{ post.excerpt | strip_html}}</p>
 		<a href="{{ post.url }}">Read more...</a>
